_archive_deploys/deploy-niraj-notifications/force-app/main/default/objects/Agreement_Notification__c/Agreement_Notification__c.object-meta.xml
<CustomObject>
    <description>Log of agreement-related notifications sent to users (currently Niraj). One row per fired notification.</description>
    <label>Agreement Notification</label>
    <nameField>
        <displayFormat>NTF-{00000}</displayFormat>
        <label>Notification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>