_archive_deploys/deploy-niraj-notifications/force-app/main/default/objects/Agreement_Notification__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agreement</label>
    <referenceTo>Agreement__c</referenceTo>
    <relationshipLabel>Notifications</relationshipLabel>
    <relationshipName>Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>