_archive_deploys/deploy-niraj-notifications/force-app/main/default/objects/Agreement_Notification__c/fields/Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>Notification_Type__c</fullName>
    <label>Notification Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>PAL Signed</fullName><default>false</default><label>PAL Signed</label></value>
            <value><fullName>EMA Signed</fullName><default>false</default><label>EMA Signed</label></value>
            <value><fullName>NEMA Signed</fullName><default>false</default><label>NEMA Signed</label></value>
            <value><fullName>Bulk Signed</fullName><default>false</default><label>Bulk Signed</label></value>
            <value><fullName>PAL Addendum Signed</fullName><default>false</default><label>PAL Addendum Signed</label></value>
            <value><fullName>MSA Addendum Signed</fullName><default>false</default><label>MSA Addendum Signed</label></value>
            <value><fullName>2nd ISP MSA Addendum Signed</fullName><default>false</default><label>2nd ISP MSA Addendum Signed</label></value>
            <value><fullName>2nd ISP NEMA Signed</fullName><default>false</default><label>2nd ISP NEMA Signed</label></value>
            <value><fullName>Bulk Under Review</fullName><default>false</default><label>Bulk Under Review</label></value>
            <value><fullName>PAL Terminated</fullName><default>false</default><label>PAL Terminated</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>