_archive_deploys/deploy-niraj-notifications/force-app/main/default/objects/Agreement_Notification__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Agreement Notifications</relationshipLabel>
    <relationshipName>Agreement_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>