_archive_deploys/deploy-niraj-notifications/force-app/main/default/objects/Agreement_Notification__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Agreement Notifications</relationshipLabel>
    <relationshipName>Agreement_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>