_archive_deploys/deploy-niraj-notifications/force-app/main/default/objects/Agreement_Notification__c/fields/Sent_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Sent_DateTime__c</fullName>
    <label>Sent DateTime</label>
    <type>DateTime</type>
</CustomField>