_archive_deploys/deploy-niraj-notifications/force-app/main/default/objects/Agreement_Notification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Notification_Type__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Agreement__c</columns>
    <columns>Recipient__c</columns>
    <columns>Sent_DateTime__c</columns>
    <columns>Title__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Notifications</label>
</ListView>