_archive_deploys/deploy-niraj-notifications/force-app/main/default/objects/Agreement_Notification__c/listViews/Recent_30_Days.listView-meta.xml
<ListView>
    <fullName>Recent_30_Days</fullName>
    <columns>NAME</columns>
    <columns>Notification_Type__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Agreement__c</columns>
    <columns>Recipient__c</columns>
    <columns>Sent_DateTime__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sent_DateTime__c</field>
        <operation>greaterThan</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Recent (30 Days)</label>
</ListView>